# FsLibc

./: .gitignore  .travis.yml  CMakeLists.txt  FsLibc.workspace  LICENSE  README.md  cross-toolchain.cmake
libc/: CMakeLists.txt  Libc.project  coverage.sh
libc/include/: fslc_stdio.h  fslc_string.h  fslc_stringx.h  stringx.h
libc/include/fslc/: fslc_malloc.h
libc/src/: fslc_bsearch.c  fslc_fgets.c  fslc_fread.c  fslc_fwrite.c  fslc_malloc.c  fslc_memcmp.c  fslc_memcpy.c  fslc_memmove.c  fslc_memset.c  fslc_memset_l.c  fslc_strchr.c  fslc_strcmp.c  fslc_strcpy.c  fslc_strcpy_e.c  fslc_strlen.c  fslc_strncmp.c  fslc_strncpy.c  fslc_strncpy_e.c  fslc_strpbrk.c  fslc_strspn.c  fslc_strstr.c  fslc_strtok_r.c  fslc_vfprintf.c
tests/: CMakeLists.txt  Tests.project  assert_d_tests.cpp  assert_nd_tests.cpp  bsearch_i_tests.cpp  bsearch_tests.cpp  fgets_tests.cpp  fread_tests.cpp  fwrite_tests.cpp  getc_tests.cpp  malloc_internals_tests.cpp  memcmp_tests.cpp  memcpy_tests.cpp  memmove_tests.cpp  memset_tests.cpp  misc_utils.h  printf_tests.cpp  putc_tests.cpp  puts_tests.cpp  stdio_fixture.cpp  stdio_fixture.h  strchr_tests.cpp  strcmp_tests.cpp  strcpy_tests.cpp  strlen_tests.cpp  strmod_fixture.cpp  strmod_fixture.h  strncmp_tests.cpp  strncpy_tests.cpp  strpbrk_tests.cpp  strspn_tests.cpp  strstr_tests.cpp  strtok_tests.cpp
